# iamporter-python

./: .gitignore  LICENSE  Pipfile  README.md  deploy.sh  pyproject.toml  requirements.txt  setup.py  test.py
.circleci/: config.yml
_old/: .coveragerc  README.md  deploy.sh  test.py
_old/iamporter/: base.py
iamporter/: __init__.py  api.py  base.py  client.py  consts.py  errors.py
tests/: conftest.py  test_base.py  test_client.py  test_iamporter.py
