[tool.poetry]
name = "iamporter"
version = "1.0beta1"
description = "An I'mport REST API Client for Human"
authors = ["kde713 <kde713@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
